// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card basic 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-basic"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card error 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-error"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            Error loading data for this card:  API threw Nullpointer
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card error/small 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard-error-small"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 eHaGPu"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            Data error.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card is editable 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-with-loading"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="3"
                  r="1"
                />
                <circle
                  cx="8"
                  cy="8"
                  r="1"
                />
                <circle
                  cx="8"
                  cy="13"
                  r="1"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card is expandable 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-with-loading"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card size gallery 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <h3>
      XSMALL
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard-size-gallery-XSMALL"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 eHaGPu"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data
          </div>
        </div>
      </div>
    </div>
    <h3>
      XSMALLWIDE
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard-size-gallery-XSMALLWIDE"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 eHaGPu"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      SMALL
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-size-gallery-SMALL"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      TALL
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facilitycard-size-gallery-TALL"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      MEDIUM
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-size-gallery-MEDIUM"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      WIDE
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "788px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-size-gallery-WIDE"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      LARGE
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facilitycard-size-gallery-LARGE"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
    <h3>
      XLARGE
    </h3>
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facilitycard-size-gallery-XLARGE"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 cxdfjl"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with empty state 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-empty"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-6 fDejXV"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with loading 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-with-loading"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        >
          <div
            className="Card__SkeletonWrapper-v5r71h-5 jhvhVs"
          >
            <div>
              <p
                className="bx--skeleton__text"
                style={
                  Object {
                    "width": "calc(100% - 73px)",
                  }
                }
              />
              <p
                className="bx--skeleton__text"
                style={
                  Object {
                    "width": "calc(100% - 11px)",
                  }
                }
              />
              <p
                className="bx--skeleton__text"
                style={
                  Object {
                    "width": "calc(100% - 43px)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with range selector 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard-with-loading"
      >
        <div
          className="Card__CardHeader-v5r71h-1 dYbAjC"
        >
          <span
            className="Card__CardTitle-v5r71h-3 ivROVb"
            title="Card Title"
          >
            Card Title
             
          </span>
          <div
            className="bx--toolbar Card__StyledToolbar-v5r71h-4 iZXuG"
          >
            <span
              className="Card__TimeRangeLabel-v5r71h-9 ebXFRr"
              id="timeRange"
            />
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Menu"
              className="Card__StyledOverflowMenu-v5r71h-8 gdmWMK bx--overflow-menu"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-label="open and close list of options"
                className="bx--overflow-menu__icon"
                focusable="false"
                height={16}
                onClick={[Function]}
                onKeyDown={[Function]}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                />
                <title>
                  open and close list of options
                </title>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Card__CardContent-v5r71h-2 kpEDvX"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
